# ChronoMate-Suite

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: Task.h  TimeTracker.h
mac_build/: CMakeLists.txt
src/: Task.cpp  TimeTracker.cpp  main.cpp
win_build/: CMakeLists.txt
